<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/cassaforte_chiusa_sfuocata"    >


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/cambiaPw_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cambiaPwuser"
                android:textColor="@android:color/white"
                android:layout_marginTop="40dp"
                android:hint="@string/nome_utente"   />


            <EditText
                android:id="@+id/oldpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white"
                android:hint="@string/vecchia_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white"
                android:hint="@string/nuova_password"
                android:inputType="textPassword" />
            <EditText
                android:id="@+id/reNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white"
                android:hint="@string/ridigita_nuova_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_cambiaPw"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/invia"
                android:textStyle="bold"
                android:background="@drawable/button_with_corner"
                android:onClick="cambiaPw"
                android:layout_gravity="bottom"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
