<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <ScrollView
        android:id="@+id/login_form"
        android:layout_above="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_applicazione"
        android:id="@+id/rownome_applicazione_label"
        android:textColor="@android:color/white"
        android:layout_alignParentLeft="true"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rownome_applicazione"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:layout_below="@+id/rownome_applicazione_label"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titolo_nome_utente"
        android:textColor="@android:color/white"
        android:id="@+id/rownome_utente_label"
        android:layout_below="@+id/rownome_applicazione"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rownome_utente"
        android:textColor="@android:color/white"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rownome_utente_label"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titolo_password"
        android:textColor="@android:color/white"
        android:id="@+id/rowpassword_label"
        android:layout_below="@+id/rownome_utente"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rowpassword"
        android:textColor="@android:color/white"
        android:layout_below="@+id/rowpassword_label"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titolo_pin"
        android:textColor="@android:color/white"
        android:id="@+id/rowpin_label"
        android:layout_below="@+id/rowpassword" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rowpin"
        android:textColor="@android:color/white"
        android:layout_below="@+id/rowpin_label"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titolo_2_pin"
        android:id="@+id/row_pin2_label"
        android:textColor="@android:color/white"
        android:layout_below="@+id/rowpin" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row_pin2"
        android:textColor="@android:color/white"
        android:layout_below="@+id/row_pin2_label"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titolo_url"
        android:textColor="@android:color/white"
        android:id="@+id/rowurl_label"
        android:layout_below="@+id/row_pin2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rowurl"
        android:textColor="@android:color/white"
        android:layout_below="@+id/rowurl_label"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titolo_note"
        android:textColor="@android:color/white"
        android:id="@+id/rownote_label"
        android:layout_below="@+id/rowurl" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rownote"
        android:textColor="@android:color/white"
        android:layout_below="@+id/rownote_label"/>

</RelativeLayout>
    </ScrollView>
    <android.support.design.widget.BottomNavigationView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        app:menu="@menu/bottom_navigation_item_mod_pw" />

</RelativeLayout>
